<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/extra_large_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/medium_poppins_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/pantone_072"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/large_padding"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_message"
            style="@style/reg_poppins_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:gravity="center"
            android:text="@string/tutorial_description_one"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cta"
            style="@style/blueButton"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/rounded_corner_button_height"
            android:layout_marginTop="@dimen/extra_huge_padding"
            android:background="@drawable/blue_solid_rounded"
            android:text="@string/close"
            android:textSize="@dimen/regular"
            app:fontFamily="@font/arial_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>