<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_fingerprint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/headerLayout"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/ic_fingerprint_black_24dp"
            android:id="@+id/icon"
            android:paddingTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_25sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sdp"
            android:text="@string/title_fingerprint"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/desc"
            android:text="@string/desc_fingerprint"
            android:layout_margin="@dimen/_10sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:paddingStart="@dimen/_25sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textAlignment="center"
            android:id="@+id/errorText"
            android:paddingEnd="@dimen/_30sdp"
            android:paddingStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"/>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:text="@string/note"
        android:layout_marginStart="@dimen/_15sdp"
        android:textAlignment="center"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:layout_alignParentBottom="true"
        android:visibility="gone"/>

</RelativeLayout>
</layout>